grapql draft component added